tests/invalid_sem/def/def12.java
class Main {
    static void run() {

    }
    static void a(String run) {

    }
}